--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.15",
+    "@astrojs/tailwind": "^6.0.2",
     "astro": "^5.13.2",
-    "tailwindcss": "^4.1.15"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.13"
   }
 }
