--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
   ],
   "compilerOptions": {
     "paths": {
+      "@/*": ["./src/*"],
       "@components/*": [
         "./src/components/*"
       ],
@@ -21,6 +22,9 @@
       "@styles/*": [
         "./src/styles/*"
       ],
+      "@sections": [
+        "./src/components/sections/*"
+      ]
     }
   }
 }
